Настройка Seo и мелкие исправления

--- a/src/css/blocks/page.scss
+++ b/src/css/blocks/page.scss
@@ -81,6 +81,7 @@
 
   &__text {
     font-size: 22px;
+    text-align: center;
 
     @media (max-width: var.$tablet-max-width) {
       font-size: 20px;
