--- a/src/css/blocks/form.scss
+++ b/src/css/blocks/form.scss
@@ -39,6 +39,13 @@
     font-size: 24px;
     font-weight: 600;
     text-wrap: nowrap;
+
+    @media (max-width: var.$tablet-max-width) {
+      font-size: 22px;
+    }
+    @media (max-width: var.$mobile-mid-width) {
+      font-size: 20px;
+    }
   }
 
   &__caption {
@@ -73,8 +80,17 @@
   }
 
   &__svg {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+
+    @media (max-width: var.$tablet-max-width) {
+      width: 50px;
+      height: 50px;
+    }
+    @media (max-width: var.$mobile-mid-width) {
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &__range-wrapper {
@@ -104,7 +120,24 @@
     }
 
     &--range {
-      min-width: 250px;
+      min-width: 450px;
+
+      @media (max-width: var.$desktop-mid-width) {
+        min-width: 350px;
+      }
+      @media (max-width: var.$tablet-max-width) {
+        min-width: 250px;
+      }
+      @media (max-width: var.$mobile-max-width) {
+        min-width: calc(100vw - 86px);
+      }
+    }
+
+    &--file {
+      max-width: calc(100vw - 86px);
+
+      text-align: center;
+      text-wrap: auto;
     }
   }
 }
