--- a/src/css/blocks/header.scss
+++ b/src/css/blocks/header.scss
@@ -30,7 +30,7 @@
     gap: 15px;
     margin-right: auto;
 
-    transition: all 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
   }
 
   &__logo-image {
@@ -57,15 +57,25 @@
     }
   }
 
+  &__badge {
+    transition: opacity 0.4s ease-in-out;
+
+    &:hover,
+    &:active {
+      opacity: 0.6;
+    }
+  }
+
   &__lang-switcher {
     display: block;
 
     font-size: 20px;
     color: var.$colorBlackTwo;
 
-    transition: all 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
 
-    &:hover, &:active {
+    &:hover,
+    &:active {
       opacity: 0.6;
     }
 
