--- a/src/css/blocks/button.scss
+++ b/src/css/blocks/button.scss
@@ -33,10 +33,32 @@
 
     transition: all 0.4s ease-in-out;
 
-    &:hover, &:active {
+    &:hover,
+    &:active {
       color: var.$colorBlackThree;
 
       background-color: transparent;
+    }
+  }
+
+  &--accent {
+    width: 100%;
+    max-width: 300px;
+    padding: 15px 30px;
+
+    color: var.$colorBlackThree;
+
+    background-color: var.$colorWhite;
+    border: 1px solid var.$colorBlackThree;
+    border-radius: 4px;
+
+    transition: all 0.4s ease-in-out;
+
+    &:hover,
+    &:active {
+      color: var.$colorWhite;
+
+      background-color: $colorBlackThree;
     }
   }
 }
