Checking code style

--- a/src/css/blocks/button.scss
+++ b/src/css/blocks/button.scss
@@ -58,7 +58,7 @@
     &:active {
       color: var.$colorWhite;
 
-      background-color: $colorBlackThree;
+      background-color: var.$colorBlackThree;
     }
   }
 }
